--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,9 @@ AllCops:
     - "Guardfile"
     - "Rakefile"
     - "node_modules/**/*"
+    - "bin/**/*"
+    - "config/**/*"
+    - "test/**/*"
 
   DisplayCopNames: true
 
